syntax = "proto3";

package ResultEventInfo;

// @wrapper 结果事件配置表(ResultEventInfo.pb.json)
message ResultEventInfo
{
    message ResultEventItem
    {
        // @name 事件编号
        // @key
        int64 resultId = 1;
        // @name 事件名称
        string name = 2;
        // @name 事件描述1
        string description1 = 3;
        // @name 事件描述2
        string description2 = 4;
        // @name 按钮文字
        string btnText = 5;
        // @name 结果记录
        int64 recordId = 6;
        // @name 效果
        repeated int64 effects = 7;
    }

    // @name 结果事件配置
    repeated ResultEventItem resultEvent_config = 1;
}